Update container styles to fix overflow issue

--- a/components/containers/generic-container/GenericContainer.module.scss
+++ b/components/containers/generic-container/GenericContainer.module.scss
@@ -1,5 +1,4 @@
 .genericContainer {
-    max-width: 100dvw;
     position: relative;
     padding: var(--spacing-600) var(--spacing-500);
     border: var(--border-200);
@@ -10,5 +9,4 @@
     align-items: center;
     justify-content: center;
     gap: var(--spacing-200);
-    overflow-x: hidden;
 }
