--- a/styles/utils/mixins/_containers.scss
+++ b/styles/utils/mixins/_containers.scss
@@ -62,11 +62,12 @@
 }
 
 @mixin columnSection {
-  width: 100%;
+  max-width: 100dvw;
   padding-inline: var(--spacing-300);
   border-bottom: var(--border-400);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
